[tool.poetry]
name = "walrus"
version = "0.1.0"
description = "FastAPI Backend app"
authors = ["John Philip <developerphilo@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poe.tasks]
dev = "python3 src/main.py"
con_db = "python3 src/create_db.py"
test = "pytest"


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
alembic = "1.12.0"
bcrypt = "==4.0.*"
psycopg2 = "==2.9.*"
python-jose = "==3.3.*"
sqlalchemy = "2.0.20"
httpx = "==0.24.*"
fastapi = "^0.103.1"
pydantic = {extras = ["email"], version = "^2.3.0"}
asyncpg = "==0.28.*"
uvicorn = "0.22.0"
pydantic-settings = "==2.0.*"
cloudinary = "^1.34.0"
mysqlclient = "^2.2.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
pymysql = "^1.1.0"
locust = "^2.16.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.103.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
